added stand select menu, change status menu, necessary commands