@@ -1,8 +1,9 @@
 package com.summer.dev.standbot.service.bot.keyboard;
 
-import com.summer.dev.standbot.constant.keyboard.MainMenuKeyboardCommandEnum;
-import com.summer.dev.standbot.constant.keyboard.StandNameCommandEnum;
-import com.summer.dev.standbot.repository.StandRepository;
+import com.summer.dev.standbot.constant.keyboard.EquipmentSelectCommand;
+import com.summer.dev.standbot.constant.keyboard.MainMenuKeyboardCommand;
+import com.summer.dev.standbot.constant.keyboard.StandInfoCommand;
+import com.summer.dev.standbot.constant.keyboard.StandSelectTemplateCommand;
 import com.summer.dev.standbot.service.StandService;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -28,13 +29,10 @@ public class InlineKeyBoardServiceImpl implements KeyBoardService<InlineKeyboard
     @Override
     public InlineKeyboardMarkup getMainMenuKeyBoard() {
         List<InlineKeyboardButton> row1 = new ArrayList<>();
-        row1.add(getStatusButton());
-        row1.add(getChangeStatusButton());
+        row1.add(getStandSelectButton());
+        row1.add(getMainMenuButton());
 
-        List<InlineKeyboardButton> row2 = new ArrayList<>();
-        row2.add(getMainMenuButton());
-
-        List<List<InlineKeyboardButton>> lists = Arrays.asList(row1, row2);
+        List<List<InlineKeyboardButton>> lists = List.of(row1);
 
         return InlineKeyboardMarkup.builder()
                 .keyboard(lists)
@@ -42,7 +40,7 @@ public class InlineKeyBoardServiceImpl implements KeyBoardService<InlineKeyboard
     }
 
     @Override
-    public InlineKeyboardMarkup getStandsNamesKeyBoard() {
+    public InlineKeyboardMarkup getStandSelectMenuKeyBoard() {
         List<List<InlineKeyboardButton>> lists = new ArrayList<>();
 
         List<String> standsNames = standService.getStandsNames();
@@ -58,31 +56,95 @@ public class InlineKeyBoardServiceImpl implements KeyBoardService<InlineKeyboard
                 .build();
     }
 
-    private InlineKeyboardButton getStatusButton() {
+    @Override
+    public InlineKeyboardMarkup getStandInfoMenuKeyBoard() {
+        List<InlineKeyboardButton> row1 = new ArrayList<>();
+        row1.add(getStandSelectButton());
+        row1.add(getChangeStatusButton());
+
+        List<InlineKeyboardButton> row2 = new ArrayList<>();
+        row2.add(getMainMenuButton());
+
+        List<List<InlineKeyboardButton>> lists = Arrays.asList(row1, row2);
+
+        return InlineKeyboardMarkup.builder()
+                .keyboard(lists)
+                .build();
+    }
+
+    @Override
+    public InlineKeyboardMarkup getEquipmentSelectMenuKeyBoard() {
+        List<InlineKeyboardButton> row1 = new ArrayList<>();
+        row1.add(getChangeStandStatusButton());
+        row1.add(getChangeMetricStatusButton());
+
+        List<InlineKeyboardButton> row2 = new ArrayList<>();
+        row2.add(getChangeDependentSessionStatusButton());
+        row2.add(getChangeIndependentSessionStatusButton());
+
+        List<InlineKeyboardButton> row3 = new ArrayList<>();
+        row3.add(getMainMenuButton());
+
+        List<List<InlineKeyboardButton>> lists = Arrays.asList(row1, row2, row3);
+
+        return InlineKeyboardMarkup.builder()
+                .keyboard(lists)
+                .build();
+    }
+
+    private InlineKeyboardButton getStandSelectButton() {
         return InlineKeyboardButton.builder()
-                .text(MainMenuKeyboardCommandEnum.SHOW_STATUS.getShowName())
-                .callbackData(MainMenuKeyboardCommandEnum.SHOW_STATUS.name())
+                .text(MainMenuKeyboardCommand.STAND_SELECT.getShowName())
+                .callbackData(MainMenuKeyboardCommand.STAND_SELECT.name())
                 .build();
     }
 
     private InlineKeyboardButton getChangeStatusButton() {
         return InlineKeyboardButton.builder()
-                .text(MainMenuKeyboardCommandEnum.CHANGE_STATUS.getShowName())
-                .callbackData(MainMenuKeyboardCommandEnum.CHANGE_STATUS.name())
+                .text(StandInfoCommand.CHANGE_STATUS.getShowName())
+                .callbackData(StandInfoCommand.CHANGE_STATUS.name())
                 .build();
     }
 
     private InlineKeyboardButton getMainMenuButton() {
         return InlineKeyboardButton.builder()
-                .text(MainMenuKeyboardCommandEnum.MAIN_MENU.getShowName())
-                .callbackData(MainMenuKeyboardCommandEnum.MAIN_MENU.name())
+                .text(MainMenuKeyboardCommand.MAIN_MENU.getShowName())
+                .callbackData(MainMenuKeyboardCommand.MAIN_MENU.name())
                 .build();
     }
 
     private InlineKeyboardButton getStandNameButton(String standName) {
         return InlineKeyboardButton.builder()
                 .text(standName)
-                .callbackData(StandNameCommandEnum.STAND_NAME_.name() + standName.toUpperCase())
+                .callbackData(StandSelectTemplateCommand.STAND_NAME_PREFIX + standName.toUpperCase())
+                .build();
+    }
+
+    private InlineKeyboardButton getChangeStandStatusButton() {
+        return InlineKeyboardButton.builder()
+                .text(EquipmentSelectCommand.STATUS_STAND.getShowName())
+                .callbackData(EquipmentSelectCommand.STATUS_STAND.name())
+                .build();
+    }
+
+    private InlineKeyboardButton getChangeMetricStatusButton() {
+        return InlineKeyboardButton.builder()
+                .text(EquipmentSelectCommand.STATUS_METRIC.getShowName())
+                .callbackData(EquipmentSelectCommand.STATUS_METRIC.name())
+                .build();
+    }
+
+    private InlineKeyboardButton getChangeDependentSessionStatusButton() {
+        return InlineKeyboardButton.builder()
+                .text(EquipmentSelectCommand.STATUS_DEPENDENT_SESSION.getShowName())
+                .callbackData(EquipmentSelectCommand.STATUS_DEPENDENT_SESSION.name())
+                .build();
+    }
+
+    private InlineKeyboardButton getChangeIndependentSessionStatusButton() {
+        return InlineKeyboardButton.builder()
+                .text(EquipmentSelectCommand.STATUS_INDEPENDENT_SESSION.getShowName())
+                .callbackData(EquipmentSelectCommand.STATUS_INDEPENDENT_SESSION.name())
                 .build();
     }
 }
